<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SanLutex XXI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="benvingut">Benvingut a SanLutex</string>
    <string name="msinici">Introduir les vostes dades</string>
    <string name="nom">Nom</string>
    <string name="reproduir">Reproduir</string>
    <string name="cognom">Cognom</string>
    <string name="video">Veure video</string>
    <string name="imatges">Imatges entorn</string>
	<string name="gravar">Gravar missatge</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_mostrar_video">MostrarVideo</string>
    <string name="title_activity_mostrar_fotos">MostrarFotos</string>
    <string name="title_activity_gravar_msg">GravarMsg</string>
    <string name="title_activity_ampliar_foto">AmpliarFoto</string>
    <string name="title_activity_mostrar_fotos_bck">MostrarFotosBck</string>
	<string name="foto">Fer foto</string>
    <string name="continuar">Continuar</string>
</resources>
