<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:scaleType="fitCenter"
        android:src="@drawable/fondo" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/txtbenvinguda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benvingut"
            android:textColor="@color/blanco"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="70dp" >

            <TextView
                android:id="@+id/txtSalutacio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nom Usuari"
                android:textColor="@color/blanco"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/imgusuari"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:src="@drawable/apartament" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mostrarVideo"
            android:src="@drawable/video" />

        <TextView
            android:id="@+id/lblvideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:textColor="@color/blanco"
            android:textSize="12dp" />

        <ImageButton
            android:id="@+id/btnFotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mostrarFotos"
            android:src="@drawable/photos" />

        <TextView
            android:id="@+id/lblfotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imatges"
            android:textColor="@color/blanco"
            android:textSize="12dp" />

        <ImageButton
            android:id="@+id/btnGravar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gravarMissatge"
            android:src="@drawable/grabar" />

        <TextView
            android:id="@+id/lblgravar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravar"
            android:textColor="@color/blanco"
            android:textSize="12dp"/>

        <ImageView
            android:id="@+id/imatgeCap"
            android:layout_width="264dp"
            android:layout_height="140dp"
            android:layout_weight="0.58" />
    </LinearLayout>

</merge>