<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:scaleType="fitCenter"
        android:src="@drawable/fondo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblnom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blanco"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editTextNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/blanco"
            android:textSize="25dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/lblcognom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cognom"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blanco"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editTextCognom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/blanco"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnFerFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="ferUnaFoto"
                    android:src="@drawable/ferfoto" />

                <TextView
                    android:id="@+id/lblferfoto"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/foto"
                    android:textColor="@color/blanco"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnContinuar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="continuar"
                    android:src="@drawable/entrar" />

                <TextView
                    android:id="@+id/lblcontinuar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/continuar"
                    android:textColor="@color/blanco"
                    android:textSize="10dp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imatgeCap"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_weight="0.49" />
    </LinearLayout>

</merge>